# audio-hyperencoder

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  environment.yml  model_config.json  pre_encode.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
configs/data/: he_new.json  hyperencoder.json  pre_encode_dataset_config.json  pre_encode_pdmx.json  pre_encoded.json
configs/models/: hyperencoder.json  hyperencoder_basic.json
hyperencoder/: __main__.py  latent_dev.ipynb  logging_utils.py  pre_encode.py  pre_encode_audio.py  train.py  train_encoder.py
hyperencoder/data/: __init__.py  audio.py  latent.py  utils.py
hyperencoder/defaults/: train_defaults.ini
hyperencoder/models/: __init__.py  hyperencoder.py  utils.py
hyperencoder/modules/: __init__.py  audio_autoencoder.py  latent_autoencoder.py
hyperencoder/notebooks/: logging_debug.ipynb
hyperencoder/training/: __init__.py  hyperencoder.py
src/: enc_audio_dev.ipynb  latent_dataloader.py  pre_encode.py  pre_encode_latents.py  train_encoder.py
