[project]
name = "audio-latent-of-latents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "diffusers>=0.31.0",
    "huggingface-hub>=0.27.0",
    "matplotlib>=3.9.4",
    "numpy>=1.23.5",
    "scikit-learn>=1.6.0",
    "stable-audio-tools>=0.0.16",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'"},
]

torchaudio = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'"},
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
