[project]
name = "hyperencoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "diffusers>=0.31.0",
    "huggingface-hub>=0.27.0",
    "lightning>=2.5.0.post0",
    "matplotlib>=3.9.4",
    "numpy>=1.23.5",
    "prefigure>=0.0.9",
    "pypesq",
    "safetensors>=0.4.5",
    "scikit-learn>=1.6.0",
    "stable-audio-tools>=0.0.16",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "wandb>=0.15.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pre-commit>=4.1.0",
    "ruff>=0.8.4",
    "wandb>=0.15.4",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'"},
]
torchaudio = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'"},
]
stable-audio-tools = { path = "stable-audio-tools" , editable = true }
pypesq = { git = "https://github.com/vBaiCai/python-pesq" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.isort]
length-sort = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
